--- a/PdfLib/PdfLib.csproj
+++ b/PdfLib/PdfLib.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="PDFsharp" Version="6.1.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="Fonts\Lato-Regular.ttf" />
+    </ItemGroup>
+
 </Project>
