--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -6,8 +6,12 @@ name: Build and Test
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - '**/README*.md'
   pull_request:
     branches: [ "main" ]
+    paths-ignore:
+      - '**/README*.md'
 
 jobs:
   build:
