Add test project and initial unit tests
Introduce a new test project, including `PdfLibSharp.Tests.csproj`, and integrate it with the solution. Add initial tests for `LayoutBuilderFactory` and `Image` class to validate their behaviors. Include necessary resources and references to support the tests.

--- a/PdfLibSharp/PdfLibSharp.csproj
+++ b/PdfLibSharp/PdfLibSharp.csproj
@@ -24,4 +24,8 @@
       <PackageReference Include="PDFsharp" Version="6.1.1" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="PdfLibSharp.Tests" />
+    </ItemGroup>
+
 </Project>
